file(GLOB_RECURSE APP_COMMON_SOURCES CONFIGURE_DEPENDS "*.cpp" "*.h")
ok_add_library(OpenKneeboard-App-Common STATIC ${APP_COMMON_SOURCES})
target_compile_definitions(
  OpenKneeboard-App-Common
  PUBLIC
  "DIRECTINPUT_VERSION=0x0800"
  "OPENKNEEBOARD_JSON_SERIALIZE=1"
)
target_link_libraries(
  OpenKneeboard-App-Common
  PUBLIC
  ThirdParty::JSON
)
target_link_windows_app_sdk(OpenKneeboard-App-Common)
target_link_libraries(
  OpenKneeboard-App-Common
  PRIVATE
  OpenKneeboard-D2DErrorRenderer
  OpenKneeboard-DXResources
  OpenKneeboard-Filesystem
  OpenKneeboard-GameEvent
  OpenKneeboard-GetSystemColor
  OpenKneeboard-OpenXRMode
  OpenKneeboard-PDFNavigation
  OpenKneeboard-RayIntersectsRect
  OpenKneeboard-RuntimeFiles
  OpenKneeboard-SHM
  OpenKneeboard-SteamVRKneeboard
  OpenKneeboard-ThreadGuard
  OpenKneeboard-UTF8
  OpenKneeboard-WindowCaptureControl
  OpenKneeboard-Wintab
  OpenKneeboard-config
  OpenKneeboard-dprint
  OpenKneeboard-games
  OpenKneeboard-handles
  OpenKneeboard-scope_guard
  System::D2d1
  System::Dinput8
  System::Dwmapi
  System::Dxguid
  System::Rpcrt4
  ThirdParty::DirectXTK
  ThirdParty::GeographicLib
  ThirdParty::LibZip
  ThirdParty::Lua
  ThirdParty::OTDIPC
  ThirdParty::OpenVR
  ThirdParty::WMM
)
target_link_windows_app_sdk(OpenKneeboard-App-Common)

target_include_directories(
  OpenKneeboard-App-Common
  PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}/GamesList/include
  ${CMAKE_CURRENT_SOURCE_DIR}/PageSource/include
  ${CMAKE_CURRENT_SOURCE_DIR}/Tab/include
  ${CMAKE_CURRENT_SOURCE_DIR}/TabsList/include
  ${CMAKE_CURRENT_SOURCE_DIR}/ToolbarItems/include
  ${CMAKE_CURRENT_SOURCE_DIR}/UILayers/include
  ${CMAKE_CURRENT_SOURCE_DIR}/UserInput/include
  ${CMAKE_CURRENT_SOURCE_DIR}/include
)

ok_add_library(OpenKneeboard::App::Common ALIAS OpenKneeboard-App-Common)
